--- a/EcoWEB/Apps/Usuarios/templates/edit_profile.html
+++ b/EcoWEB/Apps/Usuarios/templates/edit_profile.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>LOGIN</title>
+    <title>EDITAR</title>
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
     <!-- bootstrap core css -->
@@ -28,8 +28,8 @@
     /* Estilos para el formulario de editar perfil */
     body, html {
         height: 100%; 
-        margin: 0; /* Elimina los márgenes predeterminados */
-        font-family: Arial, sans-serif; /* Usa una fuente genérica */
+        margin: 0; 
+        font-family: Arial, sans-serif;
     }
 
     .container_perfil {
@@ -47,15 +47,26 @@
         border: 1px solid #ddd;
         border-radius: 5px;
         background-color: #f6f8f7;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .perfil_form label {
+        margin-bottom: 5px;
+        color: #023b48;
+        font-weight: bold;
+    }
+
+    .perfil_form input[type="text"],
+    .perfil_form input[type="email"],
+    .perfil_form input[type="password"] {
+        width: calc(100% - 10px); 
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-sizing: border-box; 
     }
 
     .perfil_form h1 {
-        text-align: center;
-        margin-bottom: 20px;
-        color: #023b48;
-    }
-
-    .perfil_form h2 {
         text-align: center;
         margin-bottom: 20px;
         color: #023b48;
@@ -100,6 +111,10 @@
 
     .btn-cancel:hover {
         background-color: #6b2c2c;
+    }
+
+    .btn_pass:hover {
+        background-color: #2c4f6b;
     }
 
     .button_group {
