--- a/EcoWEB/Apps/Usuarios/templates/login.html
+++ b/EcoWEB/Apps/Usuarios/templates/login.html
@@ -53,7 +53,7 @@
             color: #023b48;
         }
 
-        .login_form input[type="text"],
+        .login_form input[type="email"],
         .login_form input[type="password"],
         .login_form button[type="submit"] {
             width: calc(100% - 22px); 
