--- a/EcoWEB/Apps/Productos/templates/products.html
+++ b/EcoWEB/Apps/Productos/templates/products.html
@@ -137,6 +137,14 @@
             background-color: #2c6b3a;
         }
 
+        .btn-cancel:hover {
+            background-color: #6b2c2c;
+        }
+
+        .btn_pass:hover {
+            background-color: #2c4f6b;
+        }
+
         .button_group {
             display: flex;
             justify-content: center;
@@ -265,8 +273,8 @@
                             <p>Unidades: {{ producto.stock }}</p>
                         {% endif %}
                         
-                        <a class="btn btn_pass" onclick="toggleEdit('{{ producto.id }}')">Editar</a>
-                        <a class="btn btn-cancel" onclick="confirmDelete('{{ producto.id }}')" >Eliminar</a>
+                        <a class="btn btn_pass" href="#" onclick="toggleEdit('{{ producto.id }}')">Editar</a>
+                        <a class="btn btn-cancel" href="#" onclick="confirmDelete('{{ producto.id }}')" >Eliminar</a>
                     </div>
                     <div id="form-{{ producto.id }}" class="hidden">
                         <form method="post" action="{% url 'edit_product' producto.id %}" class="edit-form" enctype="multipart/form-data">
