--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -97,7 +97,7 @@
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg custom_nav-container">
       <a class="navbar-brand" href="/">
-        <img src="static/images/MARKETECO_logo.png" alt="MARKETECO_logo" style="width: 120px; height: 120px; border-radius: 80%;">
+        <img src="/static/images/MARKETECO_logo.png" alt="MARKETECO_logo" style="width: 120px; height: 120px; border-radius: 80%;">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -105,9 +105,9 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form class="form-inline my-2 my-lg-0 flex-grow-1">
-          <input class="form-control mr-sm-2 flex-grow-1" type="search" placeholder="Buscar producto" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">BUSCAR</button>
+        <form class="form-inline my-2 my-lg-0 flex-grow-1" action="{% url 'list_products' %}" method="GET">
+            <input class="form-control mr-sm-2 flex-grow-1" type="search" name="q" placeholder="Buscar producto" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">BUSCAR</button>
         </form>
         <ul class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
@@ -124,7 +124,7 @@
           {% else %}
           <li class="nav-item">
             <a class="nav-link" href="usuarios/login">
-              <img src="static/images/logo.png" alt="" style="width: 50px; height: 50px;">
+              <img src="static/images/user-login.png" alt="" style="width: 50px; height: 50px;">
               <span>LOGIN</span>
             </a>
           </li>
@@ -576,7 +576,7 @@
             </div>
           </div>
         </a>
-        <a href="">
+        <a href="mailto:info@marketeco.shop">
           <div class="item ">
             <div class="img-box box-3">
               <img src="" alt="">
