--- a/EcoWEB/Apps/Usuarios/templates/muestra_productores.html
+++ b/EcoWEB/Apps/Usuarios/templates/muestra_productores.html
@@ -143,7 +143,7 @@
             {% endif %}
         </div>
         <div>
-            <a href="/" class="btn">Volver</a>
+            <a href="/" class="btn">Volver a Inicio</a>
         </div>
     </div>
 
