--- a/EcoWEB/Apps/Usuarios/templates/perfil_prod.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil_prod.html
@@ -69,8 +69,36 @@
             transition: background-color 0.3s ease;
         }
 
+        .btn-cancel {
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+            background-color: #8a3d3d;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn_pass{
+            border: 1px solid #ddd;
+            background-color: #3d6f8a;
+            color: #ffffff;
+
+        }
+
         .btn:hover {
             background-color: #2c6b3a; 
+        }
+
+        .btn-cancel:hover {
+            background-color: #6b2c2c;
+        }
+
+        .btn_pass:hover {
+            background-color: #2c586b;
         }
 
         .button_group {
@@ -134,16 +162,16 @@
             {% if user.is_productor %}
             <div class="button_group">
                 <a href="{% url 'products' %}" class="btn">Mis Productos</a>
-                <a href="{% url 'edit_profile_prod' %}" class="btn">Editar Perfil</a>
+                <a href="{% url 'edit_profile_prod' %}" class="btn btn_pass">Editar Perfil</a>
             {% endif %}
             </div>                
             <div class="button_group">
                 <a href="/" class="btn btn_back">Volver a Inicio</a>
-                <a href="/usuarios/signup/logout" class="btn">Salir de la cuenta de {{ user.username }}</a>
+                <a href="/usuarios/signup/logout" class="btn btn-cancel">Salir de la cuenta de {{ user.username }}</a>
             </div>
         </div>
     </div>
-
+        <a href="{% url 'eliminar_user' %}" style="float: right; margin-right: 0px;">Eliminar Usuario</a>
     <!-- footer section -->
     <section class="container-fluid footer_section_perfil">
         <p>
