--- a/EcoWEB/Apps/Compras/templates/carrito.html
+++ b/EcoWEB/Apps/Compras/templates/carrito.html
@@ -202,7 +202,7 @@
                     </div>
                 {% endfor %}
             {% else %}
-                <p>No hay productos en tu carrito.</p>
+                <p>No hay productos en tu cesta.</p>
             {% endif %}
         </div>
         <div class="carrito-total">
