--- a/EcoWEB/Apps/Compras/templates/checkout.html
+++ b/EcoWEB/Apps/Compras/templates/checkout.html
@@ -1,16 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>CHECKOUT</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" type="text/css" href="/../static/css/bootstrap.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap" rel="stylesheet">
+    <link href="/../static/css/style.css" rel="stylesheet" />
+    <link href="/../static/css/responsive.css" rel="stylesheet" /> 
     <script src="https://js.stripe.com/v3/"></script>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .container_productos {
+            background-color: #f6f8f7;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .product-item {
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            min-width: min-content;
+            border-radius: 5px;
+            overflow: hidden;
+            text-align: center;
+            margin: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .product-item:hover {
+            transform: translateY(-5px);
+        }
+
+        .product-item img {
+            width: 100px;
+            height: auto;
+            display: block;
+        }
+
+        .product-item h3, .product-item p {
+            margin: 10px 0;
+        }
+
+        .h3 {
+            margin-top: 15px;
+        }
+    
+        h2 {
+            font-size: 2.5em;
+            text-align: center;
+            color: #3d8a4f;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .checkout-summary {
+            width: 100%;
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        .checkout-summary h2, .checkout-summary h3 {
+            margin: 10px 0;
+        }
+
+        .btn-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .btn {
+            padding: 10px 40px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+            background-color: #3d8a4f;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #2c6b3a;
+        }
+    </style>
 </head>
 <body>
-    <h1>Checkout</h1>
-    <form action="{% url 'checkout' %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Pagar</button>
-    </form>
+    <!-- <h1>CHECKOUT</h1> -->
+    <div class="checkout-summary">
+        <h2>Resumen del pedido</h2>
+        {% load custom_filters %}
+        {% for productoid, producto in carrito.items %}
+        <div class="product-item">
+            {% if producto.imagen %}
+                <img src="{{ producto.imagen }}" alt="{{ producto.nombre }}"  class="product-image">
+            {% else %}
+                <img src="https://dummyimage.com/2040x1080/3d003d/ffffff.png&text=Sin+imagen+de+producto"  alt="{{ producto.nombre }}"  class="product-image">
+            {% endif %}
+            <h3> <a href="{{ producto.imagen|default:"https://dummyimage.com/2040x1080/3d003d/ffffff.png&text=Sin+imagen+de+producto" }}">{{ producto.nombre }}</a></h3>
+            <p>Precio: {{ producto.precio|format_decimal  }}€</p>
+            <p>Cantidad: {{ producto.cantidad }}</p>
+        </div>
+        {% endfor %}
+        <h3>Total: {{ total|format_decimal  }}€</h3>
+    </div>
+    <div class="btn-container">
+        <form action="{% url 'checkout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn">Pagar</button>
+        </form>
+    </div>
+
+    <!-- footer section -->
+    <section class="container-fluid footer_section">
+        <p>&copy; 2024 MARKETECO - Universidad de Sevilla</p>
+    </section>
+    <!-- footer section -->
+
 </body>
 </html>
