--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -136,23 +136,29 @@
 </header>
 <!-- header section ends -->
 
-<!-- Menú horizontal -->
+<!-- Menú horizontal mejorado -->
 <nav class="navbar navbar-expand-lg custom_nav-container">
   <div class="container-fluid">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/productos/lista_productos">Productos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/usuarios/productores">Productores</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contacto</a>
-      </li>
-    </ul>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/productos/lista_productos">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/usuarios/productores">Productores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contacto</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 <!-- end Menú horizontal -->
+
 
     <!-- slider section -->
     <section class=" slider_section position-relative">
@@ -170,7 +176,7 @@
                 <div class="col-md-4 offset-md-2">
                   <div class="slider_detail-box">
                     <h1>
-                      Professional
+                      Productos ECO
                       <span>
                         Care Your Pet
                       </span>
@@ -192,7 +198,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="static/images/slider-img.png" alt="">
+                    <img src="static/images/slider_jp1.png" alt="">
                   </div>
                 </div>
               </div>
@@ -226,7 +232,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="static/images/slider-img.png" alt="">
+                    <img src="static/images/slider_jp2.png" alt="">
                   </div>
                 </div>
               </div>
@@ -260,7 +266,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="static/images/slider-img.png" alt="">
+                    <img src="static/images/slider_jp1.png" alt="">
                   </div>
                 </div>
               </div>
@@ -294,7 +300,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="static/images/slider-img.png" alt="">
+                    <img src="static/images/slider_jp1.png" alt="">
                   </div>
                 </div>
               </div>
@@ -314,15 +320,15 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="static/images/about.png" alt="">
+            <img src="static/images/jov_2.jpg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <h2 class="custom_heading">
-              About Our Pets
+              Sobre Marketeco
               <span>
-                Clinic
+                Productos Ecológicos
               </span>
             </h2>
             <p>
@@ -624,7 +630,7 @@
         },
       });
 
-      var image = 'static/images/logo.png';
+      var image = 'static/images/MARKETECO_logo.png';
       var beachMarker = new google.maps.Marker({
         position: {
           lat: 40.645037,
