--- a/EcoWEB/Apps/Usuarios/templates/perfil.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil.html
@@ -142,11 +142,11 @@
     <div class="container_perfil">
         <div class="perfil_form">
             <h2>Perfil de Usuario</h2>
-            <p><strong>Nombre:</strong> {{ user.nombre }}</p>
-            <p><strong>Apellidos:</strong> {{ user.apellidos }}</p>
+            <p><strong>Nombre:</strong> {{ user.nombre|default:"Sin nombre establecido" }}</p>
+            <p><strong>Apellidos:</strong> {{ user.apellidos|default:"Sin apellidos establecidos" }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
-            <p><strong>Dirección:</strong> {{ user.direccion }}</p>
-            <p><strong>Teléfono:</strong> {{ user.telefono }}</p>
+            <p><strong>Dirección:</strong> {{ user.direccion|default:"Sin dirección establecida" }}</p>
+            <p><strong>Teléfono:</strong> {{ user.telefono|default:"Sin teléfono establecido" }}</p>
             <p><strong>Fecha de Alta:</strong> {{ user.fecha_alta }}</p>
             <p>
                 <strong>Foto de Perfil:</strong><br>
@@ -155,14 +155,14 @@
                 {% elif user.photo %}
                     <img src="{{ user.photo.url }}" alt="Foto de Perfil" width="200">
                 {% else %}
-                    No has subido una foto de perfil.
+                    <p> No has subido una foto de perfil.</p>
                 {% endif %}
             </p>
             
-            <a href="{% url 'edit_profile' %}" class="btn">Editar Perfil</a>
+            <a href="{% url 'edit_profile' %}" class="btn btn_pass">Editar Perfil</a>
             
             <div class="button_group">
-                <a href="/" class="btn btn_pass">Volver a Inicio</a>
+                <a href="/" class="btn">Volver a Inicio</a>
                 <a href="/usuarios/signup/logout" class="btn btn-cancel">Salir de la cuenta de {{ user.username }}</a>
             </div>
         </div>
